--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.1",
     "tailwindcss": "^3.0.19",
-    "vite": "^4.0.0",
+    "vite": "^4.4.2",
     "vue-axios": "^3.4.1",
     "vue-template-compiler": "^2.6.12"
   },
@@ -23,6 +23,7 @@
     "masonry-layout": "^4.2.2",
     "scrollreveal": "^4.0.9",
     "swiper": "^9.3.2",
+    "tailwind-fontawesome": "^0.5.0",
     "vue": "^3.2.36",
     "vue3-toastify": "0.0.4"
   }
