--- a/resources/fieldsets/banner.yaml
+++ b/resources/fieldsets/banner.yaml
@@ -1,42 +1,48 @@
-title: Masthead
+title: Banner
 fields:
   -
     handle: title
     field:
+      input_type: text
       antlers: false
-      type: textarea
+      type: text
       display: Title
-      icon: textarea
+      icon: text
       listable: hidden
       instructions_position: above
       visibility: visible
       hide_display: false
-      validate:
-        - required
   -
-    handle: byline
+    handle: text
     field:
       antlers: false
       type: textarea
-      display: Byline
+      display: Text
       icon: textarea
       listable: hidden
       instructions_position: above
       visibility: visible
       hide_display: false
   -
-    handle: image
+    handle: link
     field:
-      max_files: 1
-      mode: list
-      container: assets
-      restrict: false
-      allow_uploads: true
-      show_filename: true
-      show_set_alt: true
-      type: assets
-      display: Image
-      icon: assets
+      collections:
+        - pages
+      type: link
+      display: Link
+      icon: link
+      listable: hidden
+      instructions_position: above
+      visibility: visible
+      hide_display: false
+  -
+    handle: link_text
+    field:
+      input_type: text
+      antlers: false
+      type: text
+      display: 'Link text'
+      icon: text
       listable: hidden
       instructions_position: above
       visibility: visible
