--- a/resources/blueprints/collections/pages/page.yaml
+++ b/resources/blueprints/collections/pages/page.yaml
@@ -39,6 +39,13 @@ tabs:
                       fields:
                         -
                           import: banner
+                    text:
+                      display: Text
+                      instructions: null
+                      icon: text-formatting-initial-letter
+                      fields:
+                        -
+                          import: text_only
                     text_image:
                       display: 'Text, Image'
                       instructions: null
@@ -46,20 +53,6 @@ tabs:
                       fields:
                         -
                           import: text_image
-                    collapsible:
-                      display: Collapsible
-                      instructions: null
-                      icon: form-drop-down-menu
-                      fields:
-                        -
-                          import: collapsible
-                    section:
-                      display: Section
-                      instructions: null
-                      icon: text-formatting-markdown
-                      fields:
-                        -
-                          import: bard
                     cards:
                       display: Cards
                       instructions: null
@@ -67,18 +60,18 @@ tabs:
                       fields:
                         -
                           import: cards
+                    collapsibles:
+                      display: Collapsibles
+                      instructions: null
+                      icon: form-drop-down-menu
+                      fields:
+                        -
+                          import: collapsibles
                 special_items:
                   display: 'Special items'
                   instructions: null
                   icon: shopping-jewelry-diamond-gem
                   sets:
-                    image:
-                      display: Image
-                      instructions: null
-                      icon: media-image-picture-orientation
-                      fields:
-                        -
-                          import: image
                     anchor:
                       display: Anchor
                       instructions: null
@@ -86,13 +79,13 @@ tabs:
                       fields:
                         -
                           import: anchor_target
-                    info_box:
-                      display: 'Info box'
+                    panel:
+                      display: Panel
                       instructions: null
-                      icon: alert-warning-exclamation-mark
+                      icon: share-mega-phone
                       fields:
                         -
-                          import: info_box
+                          import: panel
               type: replicator
               display: Elements
               icon: replicator
