--- a/resources/fieldsets/banner.yaml
+++ b/resources/fieldsets/banner.yaml
@@ -24,50 +24,6 @@ fields:
       visibility: visible
       hide_display: false
   -
-    handle: link
-    field:
-      collections:
-        - pages
-      type: link
-      display: Link
-      icon: link
-      listable: hidden
-      instructions_position: above
-      visibility: visible
-      hide_display: false
+    import: link
   -
-    handle: link_text
-    field:
-      input_type: text
-      antlers: false
-      type: text
-      display: 'Link text'
-      icon: text
-      listable: hidden
-      instructions_position: above
-      visibility: visible
-      hide_display: false
-      if:
-        link: 'not null'
-  -
-    handle: theme
-    field:
-      options:
-        blue: Blau
-        gray: Grau
-        light-gray: Hellgrau
-      taggable: false
-      push_tags: false
-      multiple: false
-      max_items: 1
-      clearable: false
-      searchable: true
-      cast_booleans: false
-      default: light-gray
-      type: select
-      display: Theme
-      icon: select
-      listable: hidden
-      instructions_position: above
-      visibility: visible
-      hide_display: false
+    import: background_color
