--- a/resources/fieldsets/collapsible.yaml
+++ b/resources/fieldsets/collapsible.yaml
@@ -17,13 +17,33 @@ fields:
   -
     handle: text
     field:
+      buttons:
+        - bold
+        - anchor
+      smart_typography: false
+      save_html: false
+      inline: false
+      toolbar_mode: fixed
+      reading_time: false
+      fullscreen: true
+      allow_source: true
+      enable_input_rules: true
+      enable_paste_rules: true
+      remove_empty_nodes: true
       antlers: false
-      type: textarea
+      link_noopener: true
+      link_noreferrer: true
+      target_blank: false
+      always_show_set_button: false
+      collapse: false
+      previews: true
+      type: bard
       display: Text
-      icon: textarea
+      icon: bard
       listable: hidden
       instructions_position: above
       visibility: visible
       hide_display: false
-      validate:
-        - required
+      link_collections:
+        - pages
+      container: assets
