--- a/resources/fieldsets/link.yaml
+++ b/resources/fieldsets/link.yaml
@@ -10,6 +10,7 @@ fields:
       instructions_position: above
       visibility: visible
       hide_display: false
+      container: assets
   -
     handle: link_text
     field:
