--- a/public/assets/team/.meta/annette-buhlmann.jpg.yaml
+++ b/public/assets/team/.meta/annette-buhlmann.jpg.yaml
@@ -1,7 +1,8 @@
-data: {  }
-size: 87828
-last_modified: 1689608827
-width: 1032
-height: 1193
+data:
+  focus: 53-16-1
+size: 70246
+last_modified: 1689619334
+width: 688
+height: 1032
 mime_type: image/jpeg
 duration: null
