--- a/resources/fieldsets/link.yaml
+++ b/resources/fieldsets/link.yaml
@@ -11,6 +11,8 @@ fields:
       visibility: visible
       hide_display: false
       container: assets
+      collections:
+        - pages
   -
     handle: link_text
     field:
