--- a/resources/users/roles.yaml
+++ b/resources/users/roles.yaml
@@ -1,4 +1,52 @@
-# admin:
-#   title: Administrator
-#   permissions:
-#     - super
+editor:
+  title: Editor
+  permissions:
+    - 'access cp'
+    - 'manage preferences'
+    - 'view pages entries'
+    - 'edit pages entries'
+    - 'create pages entries'
+    - 'delete pages entries'
+    - 'publish pages entries'
+    - 'reorder pages entries'
+    - 'edit other authors pages entries'
+    - 'publish other authors pages entries'
+    - 'delete other authors pages entries'
+    - 'view team entries'
+    - 'edit team entries'
+    - 'create team entries'
+    - 'delete team entries'
+    - 'publish team entries'
+    - 'reorder team entries'
+    - 'edit other authors team entries'
+    - 'publish other authors team entries'
+    - 'delete other authors team entries'
+    - 'configure navs'
+    - 'view info_nav nav'
+    - 'edit info_nav nav'
+    - 'view main_nav nav'
+    - 'edit main_nav nav'
+    - 'view privacy_nav nav'
+    - 'edit privacy_nav nav'
+    - 'edit contact_information globals'
+    - 'view categories terms'
+    - 'edit categories terms'
+    - 'create categories terms'
+    - 'delete categories terms'
+    - 'view assets assets'
+    - 'upload assets assets'
+    - 'edit assets assets'
+    - 'move assets assets'
+    - 'rename assets assets'
+    - 'delete assets assets'
+    - 'view users'
+    - 'edit users'
+    - 'create users'
+    - 'delete users'
+    - 'change passwords'
+    - 'assign user groups'
+    - 'assign roles'
+    - 'edit user groups'
+    - 'edit roles'
+    - 'access cache utility'
+    - 'access search utility'
